// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Components/ShareLink/form/DevToolsOptions Snapshots: DevToolsOptions Default 1`] = `
<DevToolsOptionsWrapped>
  <DevtoolsOptions
    repository={
      Object {
        "environment": Object {
          "base": Object {
            "developmentTools": Array [
              "jupyterLab",
              "notebook",
            ],
          },
          "bundledApps": Array [
            Object {
              "name": "tensor-brd",
            },
          ],
        },
        "name": "projectname",
        "owner": "ownername",
      }
    }
    updateDevtoolUrl={[MockFunction]}
  >
    <div
      className="DevtoolsOptions"
      data-selenium-id="DevtoolsOptionsx"
    >
      <h6>
        Tool
      </h6>
      <div
        className="DevtoolsOptions__container"
      >
        <Dropdown
          itemAction={[Function]}
          label="none"
          listAction={[Function]}
          listItems={
            Array [
              "none",
              "jupyterLab",
              "notebook",
              undefined,
            ]
          }
          visibility={false}
        >
          <div
            className="Dropdown relative Dropdown--collapsed"
            data-selenium-id="Dropdown"
            onClick={[Function]}
            role="presentation"
          >
            none
          </div>
        </Dropdown>
      </div>
    </div>
  </DevtoolsOptions>
</DevToolsOptionsWrapped>
`;

exports[`Storyshots Components/ShareLink/form/DevtoolsOptions Snapshots: DevtoolsOptions Default 1`] = `
<DevtoolsOptionsWrapped>
  <DevtoolsOptions
    repository={
      Object {
        "environment": Object {
          "base": Object {
            "developmentTools": Array [
              "jupyterLab",
              "notebook",
            ],
          },
          "bundledApps": Array [
            Object {
              "name": "tensor-brd",
            },
          ],
        },
        "name": "projectname",
        "owner": "ownername",
      }
    }
    updateDevtoolUrl={[MockFunction]}
  >
    <div
      className="DevtoolsOptions"
      data-selenium-id="DevtoolsOptionsx"
    >
      <h6>
        Tool
      </h6>
      <div
        className="DevtoolsOptions__container"
      >
        <Dropdown
          itemAction={[Function]}
          label="none"
          listAction={[Function]}
          listItems={
            Array [
              "none",
              "jupyterLab",
              "notebook",
              undefined,
            ]
          }
          visibility={false}
        >
          <div
            className="Dropdown relative Dropdown--collapsed"
            data-selenium-id="Dropdown"
            onClick={[Function]}
            role="presentation"
          >
            none
          </div>
        </Dropdown>
      </div>
    </div>
  </DevtoolsOptions>
</DevtoolsOptionsWrapped>
`;
